# rust-template

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Cargo.toml.msrv  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  build.rs  justfile  msrv-pins.toml  rustfmt.toml
.github/workflows/: audit-check.yml  ci.yml  publish.yml  release.yml
src/: lib.rs  main.rs
tests/: integration_tests.rs
