[package]
name = "rust-template-output"
version = "0.1.0"
edition = "2024"
default-run = "rust-template-output"
rust-version = "1.85.1"

[features]
test_feature_1 = []

[dependencies]
bytes = "1.10.1"
derive_builder = "0.20.2"
either = "1.15.0"
futures = "0.3.31"
mockall_double = "0.3.1"
paste = "1.0.15"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.100"
assert_matches = "1.5.0"
itertools = "0.14.0"
mockall = "0.13.1"
serial_test = "3.2.0"
wiremock = "0.6.5"
wiremock_logical_matchers = "0.6.2"

[build-dependencies]
rustc_version = "0.4.1"
