[package]
name = "rust-template-output"
version = "0.1.0"
edition = "2024"
default-run = "rust-template-output"
rust-version = "1.85.1"

[features]
test_feature_1 = []

[dependencies]
bytes = "1.11.1"
derive_builder = "0.20.2"
either = "1.15.0"
futures = "0.3.32"
gratte = "2.0.0"
mockall_double = "0.3.1"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.102"
assert_matches = "1.5.0"
itertools = "0.14.0"
mockall = "0.14.0"
serial_test = "3.4.0"
wiremock = "0.6.5"
wiremock_logical_matchers = "0.6.2"
